--- a/iris_nn.ipynb
+++ b/iris_nn.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPhLJXg8agzrbnu5TSibRVk",
+      "authorship_tag": "ABX9TyOImb4hyqBFcjREs6XpuU7T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "RnSxmmnIPeHL"
       },
-      "execution_count": 28,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -60,7 +60,7 @@
       "metadata": {
         "id": "hTQAnFY3Y15k"
       },
-      "execution_count": 29,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "QEhFJ-9VbNmv"
       },
-      "execution_count": 30,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "iL-A0OE4bxr6"
       },
-      "execution_count": 31,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -101,9 +101,9 @@
           "height": 206
         },
         "id": "UZHtHtSgcF8Q",
-        "outputId": "0bce71e7-b420-4369-a58d-c66083d2a3ee"
+        "outputId": "6a2d5064-e5cc-4257-8c8e-17279f4ca367"
       },
-      "execution_count": 32,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -118,7 +118,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a01d2fb7-5c34-4f52-8f36-a23d178df5f2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-51326914-38ce-4060-9fd8-bb381ab7e76b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -191,7 +191,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a01d2fb7-5c34-4f52-8f36-a23d178df5f2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-51326914-38ce-4060-9fd8-bb381ab7e76b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -243,12 +243,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a01d2fb7-5c34-4f52-8f36-a23d178df5f2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-51326914-38ce-4060-9fd8-bb381ab7e76b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a01d2fb7-5c34-4f52-8f36-a23d178df5f2');\n",
+              "        const element = document.querySelector('#df-51326914-38ce-4060-9fd8-bb381ab7e76b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -268,8 +268,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-e867c3c3-f67e-4174-9446-273f11715a49\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e867c3c3-f67e-4174-9446-273f11715a49')\"\n",
+              "<div id=\"df-f35c67a6-8669-48a0-a29a-c58c027dca89\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f35c67a6-8669-48a0-a29a-c58c027dca89')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -388,7 +388,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-e867c3c3-f67e-4174-9446-273f11715a49 button');\n",
+              "        document.querySelector('#df-f35c67a6-8669-48a0-a29a-c58c027dca89 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -405,7 +405,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 6
         }
       ]
     },
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "hi6Cv2zWcnCu"
       },
-      "execution_count": 33,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -433,9 +433,9 @@
           "height": 206
         },
         "id": "5LbWsEKd_HMX",
-        "outputId": "0a52ab9a-b881-4a78-98ff-664e51eed257"
+        "outputId": "7de4db55-23bc-4ee7-9d8c-4c03021fff46"
       },
-      "execution_count": 34,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +450,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-591f1095-a3ef-4b60-970d-577de999faa3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2762b21b-0a3e-4f3f-9e96-d0f85fb63a90\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -523,7 +523,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-591f1095-a3ef-4b60-970d-577de999faa3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2762b21b-0a3e-4f3f-9e96-d0f85fb63a90')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -575,12 +575,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-591f1095-a3ef-4b60-970d-577de999faa3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2762b21b-0a3e-4f3f-9e96-d0f85fb63a90 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-591f1095-a3ef-4b60-970d-577de999faa3');\n",
+              "        const element = document.querySelector('#df-2762b21b-0a3e-4f3f-9e96-d0f85fb63a90');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -600,8 +600,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ce01c134-6b7d-430f-b4f7-38d6327db82d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ce01c134-6b7d-430f-b4f7-38d6327db82d')\"\n",
+              "<div id=\"df-80c5e696-e8ee-40fd-840b-3a245290e2a2\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-80c5e696-e8ee-40fd-840b-3a245290e2a2')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -720,7 +720,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ce01c134-6b7d-430f-b4f7-38d6327db82d button');\n",
+              "        document.querySelector('#df-80c5e696-e8ee-40fd-840b-3a245290e2a2 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -737,7 +737,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 8
         }
       ]
     },
@@ -750,7 +750,7 @@
       "metadata": {
         "id": "QFWL1Ljc_JFK"
       },
-      "execution_count": 35,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -762,7 +762,7 @@
       "metadata": {
         "id": "A9ojqCi9_fhT"
       },
-      "execution_count": 36,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -773,7 +773,7 @@
       "metadata": {
         "id": "CcpAOWY7AD4i"
       },
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -784,7 +784,7 @@
       "metadata": {
         "id": "0V2ttQvNARTE"
       },
-      "execution_count": 38,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -798,7 +798,7 @@
       "metadata": {
         "id": "I4jajWDcAlzR"
       },
-      "execution_count": 39,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -810,7 +810,7 @@
       "metadata": {
         "id": "fvJ9BDPEBRXP"
       },
-      "execution_count": 40,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -824,9 +824,9 @@
           "height": 187
         },
         "id": "x5sQzkSgB0SO",
-        "outputId": "d33deb2c-ac8f-482a-b6a1-4a5ca7e71c95"
+        "outputId": "20959ed3-9437-4c6b-cabb-de88544c96d8"
       },
-      "execution_count": 41,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -895,7 +895,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 15
         }
       ]
     },
@@ -923,9 +923,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lpi-IpARCVVT",
-        "outputId": "7d443979-264b-4440-cf85-571091055dd3"
+        "outputId": "0012459d-b3a4-4464-81d2-9b461288403d"
       },
-      "execution_count": 44,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -958,9 +958,9 @@
           "height": 466
         },
         "id": "q42rej5WDv1U",
-        "outputId": "78c18a81-e7c1-488f-db5d-1c4429b265c4"
+        "outputId": "2c22c7aa-5081-45e9-b065-abe7c6eb00f3"
       },
-      "execution_count": 45,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +970,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 45
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -994,7 +994,7 @@
       "metadata": {
         "id": "tsjvGq5pD-cO"
       },
-      "execution_count": 46,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1007,9 +1007,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "td2uTe8HE7VI",
-        "outputId": "481a7506-c916-4eff-cf9e-4af66d34dfd8"
+        "outputId": "cb49f7f9-a783-4b83-d69a-b77ee71c222c"
       },
-      "execution_count": 47,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,9 +1019,86 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.save(model.state_dict(), \"iris_model.pt\")"
+      ],
+      "metadata": {
+        "id": "_3kVeulNjVnt"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_model = Model()\n",
+        "new_model.load_state_dict(torch.load(\"iris_model.pt\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "khCSglJDjbc_",
+        "outputId": "f83d996d-15a7-4e9d-d59c-0354c5c3c1b4"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<All keys matched successfully>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_model.eval()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IOWSj03TkPxj",
+        "outputId": "9cfd0d00-d6ea-4f7a-f35a-17f9bf9407b3"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Model(\n",
+              "  (fc1): Linear(in_features=4, out_features=8, bias=True)\n",
+              "  (fc2): Linear(in_features=8, out_features=9, bias=True)\n",
+              "  (out): Linear(in_features=9, out_features=3, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "e_qW-fmTkSbB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
